test/tests/bad/wrong-main-type.carth
;; WrongMainType

(def main :of Int (undefined Unit))
